--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "moment": "^2.24.0",
     "node-cron": "^2.0.3",
     "redis": "^2.8.0",
-    "twilio": "^3.39.1"
+    "twilio": "^3.39.1",
+    "typescript": "^3.7.4"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
-    "typescript": "^3.7.4",
     "ts-node": "^8.5.4"
   }
 }
