--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3"
 services:
   app:
-    build: ./
+    image: docker.pkg.github.com/whockey/drill-sergeant/drill-sergeant:latest
     ports:
-      - 8080:8080
+      - 8081:8080
     depends_on:
       - redis
   redis:
